--- a/ml_model/MlModel.ipynb
+++ b/ml_model/MlModel.ipynb
@@ -1040,6 +1040,16 @@
     "print(\"🎉 ANALYSIS COMPLETE!\")\n",
     "print(\"=\"*100)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff3b08e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.hetmap()"
+   ]
   }
  ],
  "metadata": {
